# hakim

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  KNOWN_LIMITATIONS.md  README.md  SECURITY.md  SUPPORTED_HOSTS.md  THIRD_PARTY_NOTICES.md  UPSTREAM.md  VERSIONING.md  package.json  pyproject.toml
.claude-plugin/: marketplace.json
.github/: copilot-instructions.md  pull_request_template.md
conformance/: README.md  adapter-bindings.json  native-host-acceptance.json  policy-profiles.json  suite.json
docs/: EXTERNAL_BETA_EVALUATION.md  LIVE_HOST_ACCEPTANCE.md  The Hitchhiker’s Guide to Agentic AI.md  agentic-ai-reference-SPEC.md
plugins/: README.md
scripts/: audit_complexity.py  build_native_plugin_package.mjs  build_release_checksums.py  build_runtime_conformance_fixtures.mjs  build_runtime_conformance_matrix.mjs  capability_runtime_smoke_capture.sh  capture_runtime_fixture_state.mjs  check_claude_skill_projection.mjs  check_codex_skill_projection.mjs  check_command_capability_parity.mjs  check_copilot_instructions_projection.mjs  check_cross_adapter_conformance.mjs  check_hermes_plugin_projection.mjs  check_native_host_acceptance.mjs  check_product_state_truth.mjs  check_public_package_surface.mjs  check_public_repository_boundary.mjs  check_runtime_conformance_readiness.mjs  check_transition_state_truth.mjs  check_upstream_relationship.mjs  claude_runtime_evidence_capture.sh  codex_runtime_evidence_capture.sh  codex_startup_doctor.sh  copilot_runtime_evidence_capture.sh  extract_hakim_outcome_telemetry.mjs  generate_conformance_packets.mjs  hakim_claude_launch.mjs  (+30 more)
(+143 files in other folders)
