[project]
name = "hakim"
version = "1.0.0-beta.1"
description = "Hakim evidence-bound minimalist coding intelligence foundation tooling"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[tool.hakim]
canonical_skill = "core/hakim-skill/SKILL.md"
release_channel = "public-beta"
product_telemetry = "NOT_IMPLEMENTED"
